css/style.css
/*
    Document   : css/style.css
    Created on : 2014-05-23 02:14 PM
    Author     : James Thomas @RightSaidJames
    Description: Styling for myself and Anna Sheasby (@illogicalowl)'s wedding website.
*/

header {
    color: white;
    background: rgb(150,75,0);
    padding-top: 30px;
    padding-bottom: 10px;
}

header h1 {
    text-align: center;
}

main h1 {
    color: rgb(210,105,30);
}

main h2 {
    color: rgb(150,75,0);
}

ul li {
    list-style-type: circle;
    margin-left: 5%;
}

a, a:visited {
    color: darkred;
}

a:hover, a:focus, {
    color: rgb(150,75,0);
}

strong { font-weight: bolder; }

/* Grow Transition (https://github.com/IanLunn/Hover) */

.grow {
  display: inline-block;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
}
.grow:hover, .grow:focus, .grow:active {
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

header nav {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

header nav ul li {
    display: inline;
}

header a, header a:visited {
    font-size: 1.5em; /* 36 / 16 */
    line-height: 1.333333333333333em; /* 48 / 36 */
    margin-bottom: .6666666666666667em; /* 24 / 36 */
    color: white;
    list-style-type: none;
    text-decoration: none;
}

header nav ul li a:hover, header nav ul li a:focus {
    color: #FFFAF0;
}


/* CTA Buttons */

a.cta-button {
    border: none;
    border-radius: 1em;
    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
    display: inline-block;
    font-size: 2em;
    padding: 1em 2em;
    width: auto;
    color: white;
    background: rgb(150,75,0);
    text-decoration: none;
    font-weight: bolder;
}

a.cta-button:hover, a.cta-button:focus {
    color: white;
    text-decoration: underline;
}

